# diag-auto

./: .env.example  .gitignore  Dockerfile.railway  README.md  docker-compose.yml  railway.toml
backend/: .dockerignore  Dockerfile  Dockerfile.test  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_vehicle_resolution.py  0003_diagnostic_ai.py  0004_diagnostic_indexes.py  0005_vehicle_resolver.py  0006_dtc_confidence_tiers.py
backend/app/: api.py  main.py  schemas.py  seed.py
backend/app/core/: config.py  logging.py
backend/app/database/: models.py  session.py
backend/app/modules/ai/: provider.py
backend/app/modules/diagnostic_ai/: __init__.py  analysis_service.py  context_builder.py  image_service.py  providers.py  routes.py  schemas.py
backend/app/modules/diagnostic_ai/prompts/: automotive_v1.txt
backend/app/modules/diagnostics/: engine.py
backend/app/modules/vehicle_data/: __init__.py  providers.py  routes.py  schemas.py
backend/app/modules/vehicle_resolution/: routes.py  schemas.py
backend/app/modules/vehicle_resolution/domain/: enums.py  exceptions.py  models.py  value_objects.py
backend/app/modules/vehicle_resolution/providers/: __init__.py  autoref_provider.py  base.py  licensed_http.py  mock_provider.py  nhtsa_vpic_provider.py  registry.py
backend/app/modules/vehicle_resolution/repositories/: __init__.py
backend/app/tests/: conftest.py  test_diagnostic_ai.py  test_vehicle_resolution.py  test_vehicle_resolver.py  test_workflow.py
docs/: api-contracts.md  architecture.md  roadmap.md  (+10 more)
(+38 files in other folders)
