[project]
name = "diagpilot-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1", "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2", "pydantic-settings>=2.5,<3", "python-multipart>=0.0.12,<1",
  "psycopg[binary]>=3.2,<4", "email-validator>=2.2,<3", "structlog>=24.4,<26",
  "httpx>=0.28,<1", "cryptography>=44,<47", "google-genai>=1.56,<2", "Pillow>=11,<13"
]
[project.optional-dependencies]
test = ["pytest>=8,<9", "httpx>=0.27,<1"]
[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["app.tests*"]
